--- a/index.html
+++ b/index.html
@@ -104,4 +104,6 @@
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js');
     }
-  </
+  </script>
+</body>
+</html>
