Change language to Chinese and update styles

--- a/index.html
+++ b/index.html
@@ -1,109 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta charset="UTF-8" />
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-  <link rel="manifest" href="manifest.json">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="manifest" href="manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
-  <title>Pronunciation</title>
+<title>Pronunciation</title>
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #fff;
-    }
-    .card {
-      text-align: center;
-      padding: 24px;
-    }
-    .word {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-    button {
-      font-size: 16px;
-      padding: 12px 20px;
-      margin: 6px;
-      border-radius: 8px;
-      border: none;
-      background: #007aff;
-      color: #fff;
-    }
-    .status {
-      margin-top: 10px;
-      color: #666;
-      font-size: 14px;
-    }
-  </style>
+<style>
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background: #fff;
+}
+
+.card {
+  text-align: center;
+  padding: 24px;
+}
+
+.word {
+  font-size: 40px;
+  margin-bottom: 24px;
+}
+
+button {
+  font-size: 18px;
+  padding: 14px 26px;
+  margin: 10px;
+  border-radius: 12px;
+  border: none;
+  background: #3478f6;
+  color: white;
+}
+
+button:disabled {
+  background: #ccc;
+}
+
+.status {
+  margin-top: 12px;
+  color: #666;
+  font-size: 14px;
+}
+</style>
 </head>
 
 <body>
-  <div class="card">
-    <div class="word" id="word">word</div>
+<div class="card">
+  <div class="word" id="word">word</div>
 
-    <button id="recordBtn">🎤 录音（3 秒）</button>
-    <button id="playBtn" disabled>▶️ 播放我的发音</button>
+  <button id="recordBtn">🎤 开始录音（3 秒）</button>
+  <br>
+  <button id="playBtn" disabled>▶️ 播放我的录音</button>
 
-    <div class="status" id="status">未开始</div>
-  </div>
+  <div class="status" id="status">未开始</div>
+</div>
 
-  <script>
-    const params = new URLSearchParams(location.search);
-    const word = params.get("word") || "";
-    document.getElementById("word").innerText = word;
+<script>
+const params = new URLSearchParams(location.search);
+const word = params.get("word") || "";
+document.getElementById("word").innerText = word;
 
-    let mediaRecorder;
-    let chunks = [];
-    let audioBlob;
-    let audioUrl;
+let mediaRecorder;
+let chunks = [];
+let audioBlob = null;
 
-    const recordBtn = document.getElementById("recordBtn");
-    const playBtn = document.getElementById("playBtn");
-    const status = document.getElementById("status");
+const recordBtn = document.getElementById("recordBtn");
+const playBtn = document.getElementById("playBtn");
+const status = document.getElementById("status");
 
-    recordBtn.onclick = async () => {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+recordBtn.onclick = async () => {
+  try {
+    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
 
-        mediaRecorder = new MediaRecorder(stream);
-        chunks = [];
+    mediaRecorder = new MediaRecorder(stream);
+    chunks = [];
 
-        mediaRecorder.ondataavailable = e => chunks.push(e.data);
+    mediaRecorder.ondataavailable = e => chunks.push(e.data);
 
-        mediaRecorder.onstop = () => {
-          audioBlob = new Blob(chunks, { type: "audio/webm" });
-          audioUrl = URL.createObjectURL(audioBlob);
-          playBtn.disabled = false;
-          status.innerText = "录音完成，可以回放";
-        };
-
-        mediaRecorder.start();
-        status.innerText = "录音中…";
-
-        setTimeout(() => {
-          mediaRecorder.stop();
-        }, 3000);
-      } catch (e) {
-        status.innerText = "无法访问麦克风";
-      }
+    mediaRecorder.onstop = () => {
+      audioBlob = new Blob(chunks, { type: "audio/webm" });
+      playBtn.disabled = false;
+      status.innerText = "录音完成，可以播放";
     };
 
-    playBtn.onclick = () => {
-      const audio = new Audio(audioUrl);
-      audio.play();
-    };
+    mediaRecorder.start();
+    status.innerText = "录音中…";
 
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js');
-    }
-  </script>
+    setTimeout(() => {
+      mediaRecorder.stop();
+    }, 3000);
+  } catch (err) {
+    status.innerText = "无法访问麦克风";
+  }
+};
+
+playBtn.onclick = () => {
+  if (!audioBlob) return;
+  const audioUrl = URL.createObjectURL(audioBlob);
+  const audio = new Audio(audioUrl);
+  audio.play();
+};
+</script>
 </body>
 </html>
